--- a/account/account-settings.html
+++ b/account/account-settings.html
@@ -850,7 +850,7 @@
                                     >
                                   </div>
                                   <div class="footer__main">
-                                    <div class="margin__bottom-24">
+                                    <div class="mb-6">
                                       <div class="flex">
                                         <span class="page-shell-mobile__lang-wrapper"
                                           ><button
