--- a/account/invite-friends.html
+++ b/account/invite-friends.html
@@ -802,7 +802,7 @@
             >
               <section>
                 <div class="_wpwi48">
-                  <div class="margin__bottom-24">
+                  <div class="mb-6">
                     <button
                       type="button"
                       class="place__recommended-heart-btn"
