--- a/account/personal-info.html
+++ b/account/personal-info.html
@@ -431,7 +431,7 @@
                                       </div>
                                     </div>
                                     <div id="airlock-inline-container"></div>
-                                    <div class="main-content__details-form-max-group">
+                                    <div class="mb-6">
                                       <button type="submit" class="btn-dark">
                                         Save
                                       </button>
@@ -627,7 +627,7 @@
                                       </div>
                                     </div>
                                     <div id="airlock-inline-container"></div>
-                                    <div class="main-content__details-form-max-group">
+                                    <div class="mb-6">
                                       <button type="submit" class="btn-dark">
                                         Save
                                       </button>
@@ -804,7 +804,7 @@
                                       </div>
                                     </div>
                                     <div id="airlock-inline-container"></div>
-                                    <div class="main-content__details-form-max-group">
+                                    <div class="mb-6">
                                       <button type="submit" class="btn-dark">
                                         Save
                                       </button>
@@ -989,7 +989,7 @@
                                       </button>
                                     </div>
                                     <div id="airlock-inline-container"></div>
-                                    <div class="main-content__details-form-max-group"></div>
+                                    <div class="mb-6"></div>
                                   </form>
                                 </div>
                                 <div class="personal-info__spacer"></div>
@@ -2152,7 +2152,7 @@
                                         </div>
                                       </div>
                                       <div id="airlock-inline-container"></div>
-                                      <div class="main-content__details-form-max-group">
+                                      <div class="mb-6">
                                         <button type="submit" class="btn-dark">
                                           Save
                                         </button>
@@ -3406,7 +3406,7 @@
                                       </div>
                                     </div>
                                     <div id="airlock-inline-container"></div>
-                                    <div class="main-content__details-form-max-group">
+                                    <div class="mb-6">
                                       <button type="submit" class="btn-dark">
                                         Save
                                       </button>
@@ -3817,7 +3817,7 @@
                                         <div
                                           id="airlock-inline-container"
                                         ></div>
-                                        <div class="main-content__details-form-max-group">
+                                        <div class="mb-6">
                                           <button
                                             type="submit"
                                             class="btn-dark"
@@ -3980,7 +3980,7 @@
                                         <div
                                           id="airlock-inline-container"
                                         ></div>
-                                        <div class="main-content__details-form-max-group">
+                                        <div class="mb-6">
                                           <button
                                             type="submit"
                                             class="btn-dark"
@@ -4161,7 +4161,7 @@
                                         <div
                                           id="airlock-inline-container"
                                         ></div>
-                                        <div class="main-content__details-form-max-group">
+                                        <div class="mb-6">
                                           <button
                                             type="submit"
                                             class="btn-dark"
@@ -4356,7 +4356,7 @@
                                         <div
                                           id="airlock-inline-container"
                                         ></div>
-                                        <div class="main-content__details-form-max-group"></div>
+                                        <div class="mb-6"></div>
                                       </form>
                                     </div>
                                     <div class="personal-info__spacer"></div>
@@ -6063,7 +6063,7 @@
                                           <div
                                             id="airlock-inline-container"
                                           ></div>
-                                          <div class="main-content__details-form-max-group">
+                                          <div class="mb-6">
                                             <button
                                               type="submit"
                                               class="btn-dark"
@@ -7673,7 +7673,7 @@
                                         <div
                                           id="airlock-inline-container"
                                         ></div>
-                                        <div class="main-content__details-form-max-group">
+                                        <div class="mb-6">
                                           <button
                                             type="submit"
                                             class="btn-dark"
