--- a/account/profile.html
+++ b/account/profile.html
@@ -736,7 +736,7 @@
                                         </div>
                                         <div>
                                           <section>
-                                            <div class="margin__bottom-24">
+                                            <div class="mb-6">
                                               <h2
                                                 tabindex="-1"
                                                 class="heading"
@@ -1831,7 +1831,7 @@ This is my about me section. I'm a millennial from the Philippines.</textarea
                                   </div>
                                   <div>
                                     <section>
-                                      <div class="margin__bottom-24">
+                                      <div class="mb-6">
                                         <h2
                                           tabindex="-1"
                                           class="heading"
