--- a/account/welcome_back.html
+++ b/account/welcome_back.html
@@ -278,7 +278,7 @@
                                       value="V4$.airbnb.com$HRRCwe0MIgY$5WuY3Z2Ipu6G794A-PNxPKvxyJRrt2T_7UEyuq7OWf8=" /><input
                                       type="hidden" name="from" value="email_login" /><input type="hidden"
                                       name="airlock_id" value="" /><input type="hidden" name="redirect_url" value="/" />
-                                    <div class="margin__bottom-24">
+                                    <div class="mb-6">
                                       <section role="status"
                                         class="e1rue1xl i144hzgs dir dir-ltr">
                                         <div class="page-shell-mobile__alert-icon-wrapper dir dir-ltr">
