--- a/edit/GuestReq.html
+++ b/edit/GuestReq.html
@@ -94,7 +94,7 @@
                         >
                           Edit experience
                         </h2>
-                        <div class="margin__bottom-24">
+                        <div class="mb-6">
                           <button type="button" class="_7qynsb1">
                             Add dates
                           </button>
