--- a/edit/photos.html
+++ b/edit/photos.html
@@ -66,7 +66,7 @@
                       <h2 id="edit-experience-modal-heading" class="app-theme__header-h2">
                         Edit experience
                       </h2>
-                      <div class="margin__bottom-24">
+                      <div class="mb-6">
                         <button type="button" class="_7qynsb1">
                           Add dates
                         </button>
