--- a/landing-pages/host-protection-insurance.html
+++ b/landing-pages/host-protection-insurance.html
@@ -246,7 +246,7 @@
                     <div class="landing-page-row">
                       <div class="flex-1">
                         <div class="landing-page-column-child-link-focus">
-                          <div class="landing-page-column-lead">
+                          <div class="mb-6">
                             <div
                               class="landing-page-image-container"
                               style="height: 48px; width: 48px"
@@ -315,7 +315,7 @@
                       </div>
                       <div class="flex-1">
                         <div class="landing-page-column-child-link-focus">
-                          <div class="landing-page-column-lead">
+                          <div class="mb-6">
                             <div
                               class="landing-page-image-container"
                               style="height: 48px; width: 48px"
