--- a/landing-pages/social-impact-host.html
+++ b/landing-pages/social-impact-host.html
@@ -1265,7 +1265,7 @@ Harlem, New York City"
                                 <div class="_1x9rd38">
                                   <div class="flex-1">
                                     <div class="_13rz9t0">
-                                      <div class="margin__bottom-24">
+                                      <div class="mb-6">
                                         <div
                                           class="_190hxbq"
                                           style="height: 48px; width: 48px"
@@ -1344,7 +1344,7 @@ Harlem, New York City"
                                   </div>
                                   <div class="flex-1">
                                     <div class="_13rz9t0">
-                                      <div class="margin__bottom-24">
+                                      <div class="mb-6">
                                         <div
                                           class="_190hxbq"
                                           style="height: 48px; width: 48px"
@@ -1418,7 +1418,7 @@ Harlem, New York City"
                                   </div>
                                   <div class="flex-1">
                                     <div class="_13rz9t0">
-                                      <div class="margin__bottom-24">
+                                      <div class="mb-6">
                                         <div
                                           class="_190hxbq"
                                           style="height: 48px; width: 48px"
