--- a/listings-product/online-experience.html
+++ b/listings-product/online-experience.html
@@ -6166,7 +6166,7 @@ Great for Team Building" class="l4a2xp4 dir dir-ltr" data-check-info-section="tr
                                                       </div>
                                                     </div>
                                                   </section>
-                                                  <div class="margin__bottom-24">
+                                                  <div class="mb-6">
                                                     <span>                                                      
                                                       <div class="_1s7yvxc">
                                                         <div class="_1d784e5">
@@ -10993,7 +10993,7 @@ Great for Team Building" class="l4a2xp4 dir dir-ltr" data-check-info-section="tr
                                                 <div class="_10qs2gf">
                                                   <div class="_v9mh2x0">
                                                     <div class="_14batbi">
-                                                      <div class="margin__bottom-24">
+                                                      <div class="mb-6">
                                                         <h3 tabindex="-1" class="heading" elementtiming="LCP-target">
                                                           <div class="_1s3yw56">Select dates</div>
                                                         </h3>
