--- a/listings-product/places.html
+++ b/listings-product/places.html
@@ -13333,7 +13333,7 @@
                               </div>
                               <div style="margin-bottom: 64px">
                                 <div class="place__recommended-spacer-mb"></div>
-                                <div class="main-content__details-form-max-group">
+                                <div class="mb-6">
                                   <div>
                                     <h3
                                       tabindex="-1"
