--- a/online-experience/calendar_agenda.html
+++ b/online-experience/calendar_agenda.html
@@ -4226,7 +4226,7 @@
                       </div>
                       <div data-testid="create-row-section-max_guests"
                         class="main-content__details-form- sched-content-xl">
-                        <div class="main-content__details-form-max-group">
+                        <div class="mb-6">
                           <div class="spinner-chart__input-price">
                             <label class="input-field" for="max_guests">
                               <div class="spinner-chart__input-title">
@@ -4247,7 +4247,7 @@
                       </div>
                       <div data-testid="create-row-section-max_private_guests"
                         class="main-content__details-form- sched-content-xl">
-                        <div class="main-content__details-form-max-group">
+                        <div class="mb-6">
                           <div class="spinner-chart__input-price">
                             <label class="input-field" for="max_private_guests">
                               <div class="spinner-chart__input-title">
