--- a/resource-center/article.html
+++ b/resource-center/article.html
@@ -1185,7 +1185,7 @@
                                 <div class="_mnhnkt">
                                     <div class="_1kd3vyi">
                                         <div data-showat="largeAndAbove">
-                                            <div class="margin__bottom-24">
+                                            <div class="mb-6">
                                                 <div class="_orqpgh">
                                                     <div class="_1sf10rg"><svg viewBox="0 0 24 24" role="presentation"
                                                             aria-hidden="true" focusable="false"
