--- a/resource-center/resources.html
+++ b/resource-center/resources.html
@@ -1355,7 +1355,7 @@
                                       <div class="_1hytef3">
                                         <div class="vh-100">
                                           <div class="relative">
-                                            <div class="main-content__details-form-max-group" style="margin-left: 24px" aria-hidden="true">
+                                            <div class="mb-6" style="margin-left: 24px" aria-hidden="true">
                                               <div aria-hidden="false" class="_of605hp">
                                                 <div class="flex">
                                                   <button aria-label="Previous" disabled="" type="button" class="_1c377o8">
@@ -1792,7 +1792,7 @@
                                       <div class="header__logo">
                                         <div class="vh-100">
                                           <div class="relative">
-                                            <div class="main-content__details-form-max-group" style="margin-left: 40px" aria-hidden="true">
+                                            <div class="mb-6" style="margin-left: 40px" aria-hidden="true">
                                               <div aria-hidden="false" class="_of605hp">
                                                 <div class="flex">
                                                   <button aria-label="Previous" disabled="" type="button" class="_1c377o8">
@@ -2229,7 +2229,7 @@
                                       <div class="explore__time-btn-wrapper">
                                         <div class="vh-100">
                                           <div class="relative">
-                                            <div class="main-content__details-form-max-group" style="margin-left: 80px" aria-hidden="true">
+                                            <div class="mb-6" style="margin-left: 80px" aria-hidden="true">
                                               <div aria-hidden="false" class="_of605hp">
                                                 <div class="flex">
                                                   <button aria-label="Previous" disabled="" type="button" class="_1c377o8">
@@ -2665,7 +2665,7 @@
                                     <div class="hidden block-xxl">
                                       <div class="vh-100">
                                         <div class="relative">
-                                          <div class="main-content__details-form-max-group" style="margin-left: 0" aria-hidden="true">
+                                          <div class="mb-6" style="margin-left: 0" aria-hidden="true">
                                             <div aria-hidden="false" class="_of605hp">
                                               <div class="flex">
                                                 <button aria-label="Previous" disabled="" type="button" class="_1c377o8">
