--- a/edit/what.html
+++ b/edit/what.html
@@ -86,7 +86,7 @@
                         >
                           Edit experience
                         </h2>
-                        <div class="margin__bottom-24">
+                        <div class="mb-6">
                           <button type="button" class="_7qynsb1">
                             Add dates
                           </button>
