--- a/landing-pages/onlinehost.html
+++ b/landing-pages/onlinehost.html
@@ -304,7 +304,7 @@
                     <div class="landing-page-row">
                       <div class="flex-1">
                         <div class="landing-page-column-child-link-focus">
-                          <div class="landing-page-column-lead">
+                          <div class="mb-6">
                             <div
                               class="landing-page-image-container"
                               style="height: 48px; width: 48px"
@@ -361,7 +361,7 @@
                       </div>
                       <div class="flex-1">
                         <div class="landing-page-column-child-link-focus">
-                          <div class="landing-page-column-lead">
+                          <div class="mb-6">
                             <div
                               class="landing-page-image-container"
                               style="height: 48px; width: 48px"
@@ -419,7 +419,7 @@
                       </div>
                       <div class="flex-1">
                         <div class="landing-page-column-child-link-focus">
-                          <div class="landing-page-column-lead">
+                          <div class="mb-6">
                             <div
                               class="landing-page-image-container"
                               style="height: 48px; width: 48px"
@@ -1723,7 +1723,7 @@
                     <div class="landing-page-row">
                       <div class="flex-1">
                         <div class="landing-page-column-child-link-focus">
-                          <div class="landing-page-column-lead">
+                          <div class="mb-6">
                             <div
                               class="landing-page-image-container"
                               style="height: 48px; width: 48px"
@@ -1781,7 +1781,7 @@
                       </div>
                       <div class="flex-1">
                         <div class="landing-page-column-child-link-focus">
-                          <div class="landing-page-column-lead">
+                          <div class="mb-6">
                             <div
                               class="landing-page-image-container"
                               style="height: 48px; width: 48px"
@@ -1839,7 +1839,7 @@
                       </div>
                       <div class="flex-1">
                         <div class="landing-page-column-child-link-focus">
-                          <div class="landing-page-column-lead">
+                          <div class="mb-6">
                             <div
                               class="landing-page-image-container"
                               style="height: 48px; width: 48px"
