--- a/listings-product/products-luxe.html
+++ b/listings-product/products-luxe.html
@@ -4245,7 +4245,7 @@
                                                       elementtiming="LCP-target">Location</h2>
                                                   </div>
                                                 </div>
-                                                <div class="margin__bottom-24">Sovicille, Siena, Italy</div>
+                                                <div class="mb-6">Sovicille, Siena, Italy</div>
                                                 <div class="_384m8u">
                                                   <div class="_10u42wu"><span aria-busy="true"
                                                       style="display: inline-block; height: 100%; width: 100%;"><span
@@ -14233,7 +14233,7 @@
                                                     elementtiming="LCP-target">Location</h2>
                                                 </div>
                                               </div>
-                                              <div class="margin__bottom-24">Sovicille, Siena, Italy</div>
+                                              <div class="mb-6">Sovicille, Siena, Italy</div>
                                               <div class="_384m8u">
                                                 <div class="_10u42wu"><span aria-busy="true"
                                                     style="display: inline-block; height: 100%; width: 100%;"><span
