--- a/listings-product/specific_trip.html
+++ b/listings-product/specific_trip.html
@@ -236,7 +236,7 @@
                                     <div class="_5g6li5">
                                       <div class="w-full">
                                         <section>
-                                          <div class="main-content__details-form-max-group">
+                                          <div class="mb-6">
                                             <div class="page-container">
                                               <div style="margin: 0px">
                                                 <div class="_1ygqyztr">
