--- a/payments/resolutions_3.html
+++ b/payments/resolutions_3.html
@@ -264,7 +264,7 @@
                                   </div>
                                 </div>
                                 <!-- <div class="header__logo">
-                                  <div class="header__logo-wrapper">
+                                  <div class="mb-6">
                                     <div class="header__logo-content">
                                       <h2
                                         tabindex="-1"
