--- a/account/privacy-and-sharing.html
+++ b/account/privacy-and-sharing.html
@@ -542,7 +542,7 @@
                                                           search results.
                                                         </div>
                                                       </div>
-                                                      <div class="payment-payout__notice-desc-text">
+                                                      <div class="mt-4">
                                                         <button
                                                           aria-checked="false"
                                                           aria-labelledby="includeInSearchEngines-switch-row-title"
@@ -625,7 +625,7 @@
                                                           </button>
                                                         </div>
                                                       </div>
-                                                      <div class="payment-payout__notice-desc-text">
+                                                      <div class="mt-4">
                                                         <button
                                                           aria-checked="true"
                                                           aria-labelledby="useDataForInclusion-switch-row-title"
@@ -1205,7 +1205,7 @@
                                                   results.
                                                 </div>
                                               </div>
-                                              <div class="payment-payout__notice-desc-text">
+                                              <div class="mt-4">
                                                 <button
                                                   aria-checked="false"
                                                   aria-labelledby="includeInSearchEngines-switch-row-title"
@@ -1283,7 +1283,7 @@
                                                   </button>
                                                 </div>
                                               </div>
-                                              <div class="payment-payout__notice-desc-text">
+                                              <div class="mt-4">
                                                 <button
                                                   aria-checked="true"
                                                   aria-labelledby="useDataForInclusion-switch-row-title"
