--- a/listings-product/contact-host.html
+++ b/listings-product/contact-host.html
@@ -1817,7 +1817,7 @@
                                                         </div>
                                                       </div>
                                                     </div>
-                                                    <div class="payment-payout__notice-desc-text">
+                                                    <div class="mt-4">
                                                       <div class="dir dir-ltr">
                                                         <button data-testid="homes-pdp-cta-btn" type="button"
                                                           class="btn-primary">
@@ -1849,7 +1849,7 @@
                                                         </button>
                                                       </div>
                                                     </div>
-                                                    <div class="payment-payout__notice-desc-text"></div>
+                                                    <div class="mt-4"></div>
                                                   </div>
                                                 </div>
                                               </div>
