--- a/listings-product/products-mobile.html
+++ b/listings-product/products-mobile.html
@@ -2908,7 +2908,7 @@
                                                     </div>
                                                   </div>
                                                   <div
-                                                    class="payment-payout__notice-desc-text"
+                                                    class="mt-4"
                                                   >
                                                     <button
                                                       data-testid="location-modal-button"
