--- a/payments/payment-methods.html
+++ b/payments/payment-methods.html
@@ -2291,7 +2291,7 @@
                     </div>
                   </div>
                   <div style="margin-top: 16px">
-                    <div class="confirm-pay__service">
+                    <div class="mt-4">
                       <div class="_clw8y6">
                         <iframe
                           class="relative"
