--- a/payments/payment.html
+++ b/payments/payment.html
@@ -6686,7 +6686,7 @@
                                                           </div>
                                                         </div>
                                                       </div>
-                                                      <div class="confirm-pay__service">
+                                                      <div class="mt-4">
                                                         <div class="main-content__details-button-wrapper">
                                                           <div class="confirm-pay__price-wrapper" style="position: relative;">
                                                             <button type="button" class="confirm-pay__price-btn">
@@ -6705,7 +6705,7 @@
                                                         </div>
                                                       </div>
                                                       <div
-                                                        class="confirm-pay__service"
+                                                        class="mt-4"
                                                       >
                                                         <div
                                                           class="main-content__details-button-wrapper"
@@ -6737,7 +6737,7 @@
                                                           </div>
                                                         </div>
                                                       </div>
-                                                      <div class="confirm-pay__service">
+                                                      <div class="mt-4">
                                                         <div class="main-content__details-button-wrapper">
                                                           <div class="confirm-pay__total">
                                                             Total
@@ -6773,7 +6773,7 @@
                                                           </span>
                                                         </div>
                                                       </div>
-                                                      <div class="confirm-pay__service">
+                                                      <div class="mt-4">
                                                         <div class="main-content__details-button-wrapper">
                                                           <div class="confirm-pay__price-wrapper" style="position: relative;">
                                                             
@@ -7568,7 +7568,7 @@
                     </div>
                   </div>
                   <div style="margin-top: 16px">
-                    <div class="confirm-pay__service">
+                    <div class="mt-4">
                       <div class="_clw8y6">
                         <iframe
                           class="relative"
