--- a/submission/GuestP.html
+++ b/submission/GuestP.html
@@ -1348,7 +1348,7 @@
                                     can change this for specific instances.
                                   </div>
                                 </div>
-                                <div class="payment-payout__notice-desc-text">
+                                <div class="mt-4">
                                   <button
                                     aria-checked="false"
                                     aria-labelledby="default-private-row-title"
@@ -1401,7 +1401,7 @@
                                     </button>
                                   </div>
                                 </div>
-                                <div class="payment-payout__notice-desc-text">
+                                <div class="mt-4">
                                   <button
                                     aria-checked="false"
                                     aria-labelledby="caregiver-free-row-title"
