--- a/account/signup_login.html
+++ b/account/signup_login.html
@@ -201,7 +201,7 @@
                                       name="authenticity_token"
                                       value="V4$.airbnb.com$ugfPqnTtcxg$82jSpZccUt69r0lcWKKFI_s5sIxRRGKe9WxEcvFYUb4="
                                     />
-                                    <div class="payment-payout__notice-desc-text">
+                                    <div class="mt-4">
                                       <div class="mb-6">
                                         <section role="status" class="e1rue1xl i144hzgs dir dir-ltr">
                                           <div class="ccmqn89 dir dir-ltr">
@@ -3584,7 +3584,7 @@
                                     name="authenticity_token"
                                     value="V4$.airbnb.com$gdP3em0LrCE$ovR3jip7DgQok-zydNr4HurdV6lt7gvlzQw_6ESPnWg="
                                   />
-                                  <div class="payment-payout__notice-desc-text">
+                                  <div class="mt-4">
                                     <div class="mb-6">
                                       <section role="status" class="e1rue1xl i144hzgs dir dir-ltr">
                                         <div class="ccmqn89 dir dir-ltr">
@@ -4662,7 +4662,7 @@
                                                 </div>
                                               </div>
                                             </div>
-                                            <div class="_7t0a7a mt2">
+                                            <div class="_7t0a7a mt-4">
                                               <div class="_1vx4gysb"><svg viewBox="0 0 24 24" role="presentation"
                                                   aria-hidden="true" focusable="false"
                                                   style="height: 24px; width: 24px; display: block; fill: rgb(255, 255, 255);">
