--- a/listings-product/products.html
+++ b/listings-product/products.html
@@ -1433,7 +1433,7 @@
                                                     </div>
                                                   </div>
                                                 </div>
-                                                <div class="payment-payout__notice-desc-text">
+                                                <div class="mt-4">
                                                   <button data-testid="location-modal-button" type="button"
                                                     class="btn-link-condensed">
                                                     <span
@@ -15136,7 +15136,7 @@
                                                   </div>
                                                 </div>
                                               </div>
-                                              <div class="payment-payout__notice-desc-text">
+                                              <div class="mt-4">
                                                 <button data-testid="location-modal-button" type="button"
                                                   class="btn-link-condensed">
                                                   <span
