--- a/payments/guest-contributions.html
+++ b/payments/guest-contributions.html
@@ -430,14 +430,14 @@
                                             Don't want to keep a contribution?
                                           </div>
                                           <div class="payment-payout__notice-desc">
-                                            <div class="payment-payout__notice-desc-text">
+                                            <div class="mt-4">
                                               If you’ve already received a
                                               contribution that you don’t want
                                               to keep, consider making a
                                               donation of the same amount to
                                               your charity of choice.
                                             </div>
-                                            <div class="payment-payout__notice-desc-text">
+                                            <div class="mt-4">
                                               Need some ideas? Here are some
                                               non-profit organizations working
                                               to help with the COVID-19 crisis:
@@ -1023,7 +1023,7 @@
                                                   contribution?
                                                 </div>
                                                 <div class="payment-payout__notice-desc">
-                                                  <div class="payment-payout__notice-desc-text">
+                                                  <div class="mt-4">
                                                     If you’ve already received a
                                                     contribution that you don’t
                                                     want to keep, consider
@@ -1031,7 +1031,7 @@
                                                     same amount to your charity
                                                     of choice.
                                                   </div>
-                                                  <div class="payment-payout__notice-desc-text">
+                                                  <div class="mt-4">
                                                     Need some ideas? Here are
                                                     some non-profit
                                                     organizations working to
